<resources>
    <string name="app_name">消费贷后台</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_query">查询</string>
    <string name="action_cancel">取消</string>
    <string name="double_click_exit">再按一次退出程序</string>

    <string name="action_settings">Settings</string>




    <string name="hello">Hello World, XListViewActivity!</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="back">返回</string>
    <string name="complete">完成</string>




    <string name="set">设置</string>
    <string name="must">必填</string>
    <string name="submit">提交</string>
    <string name="recovery">恢复订单</string>
    <string name="vin_tips">正确填写可提高排名</string>
    <string name="must_fill">必填</string>
    <string name="pageSize">10</string>
    <string name="input_interviewTime">请输入面签时间</string>
    <string name="input_interviewAmount">请输入金额,单位是元</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_auditAmount">请输入金额,单位是元</string>
    <string name="input_username">请输入账号</string>
    <string name="input_password">请输入密码</string>
    <string name="loading">加载中</string>

    <string name="phone" >电话</string>
    <string name="orderId">订单ID</string>
    <string name="carName">车辆名称</string>
    <string name="buyerPhone">买家手机</string>
    <string name="buyerName">买家姓名</string>
    <string name="identity">身份证号</string>
    <string name="sellerPhone">卖家手机</string>
    <string name="applyCity">申请城市</string>
    <string name="vin_ma">车架号</string>
    <string name="dateStart">开始时间</string>
    <string name="dateEnd">结束时间</string>
    <string name="title_activity_list_order">订单列表</string>
    <string name="title_activity_detail">订单详情</string>
    <string name="title_activity_audit">电审结果</string>
    <string name="cancel">取消</string>
    <string name="noParam">直接查询</string>
    <string name="useParam">设置条件</string>
    <string name="confirm">确定</string>
    <string name="zan">暂缺</string>
    <string name="carnamezan">车辆名称暂缺</string>


    <string name="tv_order_id">订单ID：</string>
    <string name="tv_apply_city">申请城市：</string>

    <string name="tv_company">贷款机构：</string>
    <string name="tv_contact_phone">联系人电话：</string>

    <string name="tv_seller">卖家电话：</string>
    <string name="tv_buyer">买家电话：</string>
    <string name="tv_buyer_name">买家姓名：</string>
    <string name="deal_type">成交价:</string>
    <string name="TODO"></string>
    <string name="unit_ten_thousand_yuan">万元</string>
    <string name="TODO_MIDDLE"></string>
    <string name="TODO_SHORT"></string>

    <string name="buyer_location">所在地</string>


    <!--订单详情页按钮-->
    <string name="auditResult">电审结果</string>
    <string name="reSendMartal">重发资料</string>
    <string name="cancelOrder">取消订单</string>
    <string name="fillInfo">录入信息</string>
    <string name="readyOk">准备完毕</string>
    <string name="approveResult">审核结果</string>
    <string name="interviewResult">面签结果</string>
    <string name="rebackOrder">恢复订单</string>
    <string name="confirmOk">确认完成</string>
    <string name="unknowe">暂缺</string>

    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="isloacalYes">省内户口</string>
    <string name="isloacalNo">省外户口</string>
    <string name="seatCount7">0-7</string>
    <string name="seatCount8">8-9</string>
    <string name="seatCount9">9以上</string>


    <string name="mileage8">8万以下</string>
    <string name="mileage10">8-10万</string>
    <string name="mileage12">10-12万</string>
    <string name="mileage15">12-15万</string>
    <string name="mileage20">15-20万</string>
    <string name="mileage100">20万以上</string>


    <string name="UntreatedOrder">100</string> <!--未处理订单-->
    <string name="SellerUploadMaterial">200</string> <!--车商提交资料-->
    <string name="FillOrderInfo">300</string> <!--录入信息中-->
    <string name="BuyerReadyMaterial">400</string> <!--客户准备资料-->
    <string name="Approving">500</string> <!--机构审批中-->
    <string name="Interviewing">600</string> <!--面签中-->
    <string name="TransferMortgageing">700</string> <!--过户抵押中-->
    <string name="ORDER_OVER">800</string> <!--贷款成功-->
    <string name="ORDER_CLOSE">900</string> <!--关闭订单-->


    <string name="registTime">初次登记</string>
    <string name="registDate">上牌时间</string>
    <string name="seatCount">座位数</string>
    <string name="dealPrice">车辆成交价</string>
    <string name="answerCondition">回答问题</string>
    <string name="hasHouse">是否有房产</string>
    <string name="hasBankFlow">是否能提供最近六个月银行流水</string>
    <string name="hasIncome">是否能提供收入或工作证明</string>
    <string name="hasAssure">是否能提供本地人担保</string>
    <string name="isloacal">是否贷款地户口</string>
    <string name="loanPeriod">贷款期数</string>


    <string name="un_plated">未上牌</string>
    <string name="no_reg">未上牌</string>


    <string name="company">机构名称</string>
    <string name="thousand">万元</string>

    <string name="needInterview">yes</string>
    <string name="noNeedInterview">no</string>
    <string name="auditPass">yes</string>
    <string name="auditNotpass">no</string>
    <string name="interviewpass">yes</string>
    <string name="interviewNotpass">no</string>

    <string name="nobug">nobug</string>

    <string name="STATUS_VALID">1</string>
    <string name="STATUS_INVALID">2</string>



</resources>
