<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/car_list_item"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:minHeight="100dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/background"
        android:paddingBottom="3dp"
        android:paddingTop="3dp">

        <RelativeLayout
            android:id="@+id/iv_rl"
            android:layout_width="108dp"
            android:layout_height="91dp">

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/car_placeholder" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="5dip"
            android:layout_toEndOf="@id/iv_rl"
            android:layout_toRightOf="@id/iv_rl"
            android:minHeight="91dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_carName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="top"
                android:maxLines="2"
                android:singleLine="false"
                android:text="@string/carnamezan"
                android:textColor="#231815"
                android:textSize="12sp"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_order_id"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_orderId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zan"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/tv_apply_city"
                        android:textSize="12sp" />


                    <TextView
                        android:id="@+id/tv_apply_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zan"
                        android:textSize="12sp" />

                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_seller"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_seller_phone"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zan"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_buyer"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_buyer_phone"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zan"
                        android:textSize="12sp" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <View
        android:id="@+id/line_status_bottom"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_gravity="bottom"
        android:background="@color/bzj_block_divider_grey"
        android:layerType="software" />

</RelativeLayout>