<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <View style="@style/Horizontal_line_style" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/orderId"
                style="@style/TV.QueryParamDescNew"
                android:layout_centerVertical="true"
                android:text="@string/orderId" />

            <EditText
                android:id="@id/queryOrderId"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:inputType="number"
                android:maxLength="10"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:layout_centerVertical="true"
                android:textColor="@color/queryInputText"
                android:textColorHint="@color/queryInputHint"
                android:textSize="14sp"
                android:layout_toRightOf="@id/orderId" />

        </RelativeLayout>


        <View style="@style/Horizontal_line_style" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/car"
                style="@style/TV.QueryParamDescNew"
                android:layout_centerVertical="true"
                android:text="@string/carName" />

            <EditText
                android:id="@id/queryCar"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:inputType="text"
                android:maxLength="10"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:layout_centerVertical="true"
                android:textColor="@color/queryInputText"
                android:textColorHint="@color/queryInputHint"
                android:textSize="14sp"
                android:layout_toRightOf="@id/car" />

        </RelativeLayout>


        <View style="@style/Horizontal_line_style" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/buyer"
                style="@style/TV.QueryParamDescNew"
                android:layout_centerVertical="true"
                android:text="@string/buyerPhone" />

            <EditText
                android:id="@id/queryBuyerPhone"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:layout_centerVertical="true"
                android:textColor="@color/queryInputText"
                android:textColorHint="@color/queryInputHint"
                android:textSize="14sp"
                android:layout_toRightOf="@id/buyer" />

        </RelativeLayout>

        <View style="@style/Horizontal_line_style" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/seller"
                style="@style/TV.QueryParamDescNew"
                android:layout_centerVertical="true"
                android:text="@string/sellerPhone" />

            <EditText
                android:id="@id/querySellerPhone"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:layout_centerVertical="true"
                android:textColor="@color/queryInputText"
                android:textColorHint="@color/queryInputHint"
                android:textSize="14sp"
                android:layout_toRightOf="@id/seller" />

        </RelativeLayout>

        <View style="@style/Horizontal_line_style" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/city"
                style="@style/TV.QueryParamDescNew"
                android:layout_centerVertical="true"
                android:text="@string/applyCity" />

            <EditText
                android:id="@id/queryApplyCity"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:inputType="text"
                android:maxLength="10"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:layout_centerVertical="true"
                android:textColor="@color/queryInputText"
                android:textColorHint="@color/queryInputHint"
                android:textSize="14sp"
                android:layout_toRightOf="@id/city" />

        </RelativeLayout>


        <!--<View style="@style/Horizontal_line_style" />-->

        <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50dp">-->

            <!--<TextView-->
                <!--android:id="@+id/vin"-->
                <!--style="@style/TV.QueryParamDescNew"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:text="@string/vin_ma" />-->

            <!--<EditText-->
                <!--android:id="@id/queryVin"-->
                <!--android:layout_width="180dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:background="@null"-->
                <!--android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"-->
                <!--android:inputType="textCapCharacters"-->
                <!--android:maxLength="17"-->
                <!--android:paddingBottom="5dp"-->
                <!--android:paddingTop="5dp"-->
                <!--android:singleLine="true"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:textColor="@color/queryInputText"-->
                <!--android:textColorHint="@color/queryInputHint"-->
                <!--android:textSize="14sp"-->
                <!--android:layout_toRightOf="@id/vin" />-->

            <!--<TextView-->
                <!--android:id="@+id/vin_count_tv"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textSize="16sp"-->
                <!--android:textColor="@color/queryInputHint"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:text="0/17" />-->

        <!--</RelativeLayout>-->

        <View style="@style/Horizontal_line_style" />

        <RelativeLayout
            android:id="@+id/dateStart"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/start"
                style="@style/TV.QueryParamDescNew"
                android:layout_centerVertical="true"
                android:text="@string/dateStart" />

            <TextView
                android:id="@id/queryDateStart"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:maxLength="10"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:layout_centerVertical="true"
                android:textColor="@color/queryInputText"
                android:textColorHint="@color/queryInputHint"
                android:textSize="14sp"
                android:layout_toRightOf="@id/start" />

        </RelativeLayout>


        <View style="@style/Horizontal_line_style" />

        <RelativeLayout
            android:id="@+id/dateEnd"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/end"
                style="@style/TV.QueryParamDescNew"
                android:layout_centerVertical="true"
                android:text="@string/dateEnd" />

            <TextView
                android:id="@id/queryDateEnd"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:maxLength="10"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:layout_centerVertical="true"
                android:textColor="@color/queryInputText"
                android:textColorHint="@color/queryInputHint"
                android:textSize="14sp"
                android:layout_toRightOf="@id/end" />

        </RelativeLayout>
        <View style="@style/Horizontal_line_style" />

    </LinearLayout>


</RelativeLayout>